# smart-gallery

./: .gitattributes  .gitignore  FACES.md  README.md  pyproject.toml
custom/: import_canon.py  import_phone.py  recipe.py
smart_gallery/: __init__.py  cli.py  config.py  models.py  util.py
smart_gallery/analysis/: __init__.py  extract.py  faces.py
smart_gallery/dashboard/: __init__.py  app.py
smart_gallery/db/: __init__.py  repository.py  schema.py  where.py
smart_gallery/organize/: __init__.py  filters.py  organize.py
smart_gallery/reporting/: __init__.py  excel.py  figures.py
smart_gallery/services/: __init__.py  cluster_faces.py  export.py  import_media.py  init_db.py  scan_faces.py  sync.py
tests/: conftest.py  test_export.py  test_import.py  test_repository.py  test_sync.py
tests/integration/: test_extract.py
tests/resources/images/: test.CR2  test.CR3
tests/unit/: test_config.py  test_faces.py  test_models.py  test_where_parity.py
